--- a/Index.html
+++ b/Index.html
@@ -15,7 +15,7 @@
             <img src="./Assets/Images/bars-solid.svg" alt="">
         </label> -->
         <div class="logo">
-            <p>Timothy</p>
+            <p>John Wick</p>
         </div>
 
         <ul>
@@ -33,7 +33,7 @@
 
         <div class="hero-content">
             <div class="hero-text" id="hero-only">
-                <h1>I am Timothy</h1>
+                <h1>I am John wick</h1>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime, distinctio porro? Modi molestias 
                     animi aperiam quidem libero dignissimos sed molestiae voluptate voluptatem autem, ipsum nemo ullam a
                      quam fugit voluptates aliquam hic debitis repellat omnis in.
