--- a/Index.html
+++ b/Index.html
@@ -15,7 +15,7 @@
             <img src="./Assets/Images/bars-solid.svg" alt="">
         </label> -->
         <div class="logo">
-            <p>John Wick</p>
+            <p>el natty</p>
         </div>
 
         <ul>
